Bug 828202 - normalization of PAC file:// URIs causing system proxy config fails r=biesi a=bajaj