netwerk/base/src/nsPACMan.h
@@ -115,11 +115,11 @@ public:
    * the PAC file, any asynchronous PAC queries will be queued up to be
    * processed once the PAC file finishes loading.
    *
-   * @param pacURI
-   *        The nsIURI of the PAC file to load.  If this parameter is null,
-   *        then the previous PAC URI is simply reloaded.
+   * @param pacSpec
+   *        The non normalized uri spec of this URI used for comparison with
+   *        system proxy settings to determine if the PAC uri has changed.
    */
-  nsresult LoadPACFromURI(nsIURI *pacURI);
+  nsresult LoadPACFromURI(const nsCString &pacSpec);
 
   /**
    * Returns true if we are currently loading the PAC file.
@@ -127,17 +127,25 @@ public:
   bool IsLoading() { return mLoader != nullptr; }
 
   /**
-   * Returns true if the given URI matches the URI of our PAC file.
+   * Returns true if the given URI matches the URI of our PAC file or the
+   * URI it has been redirected to. In the case of a chain of redirections
+   * only the current one being followed and the original are considered
+   * becuase this information is used, respectively, to determine if we
+   * should bypass the proxy (to fetch the pac file) or if the pac
+   * configuration has changed (and we should reload the pac file)
    */
-  bool IsPACURI(nsIURI *uri) {
-    bool result;
-    return mPACURI && NS_SUCCEEDED(mPACURI->Equals(uri, &result)) && result;
+  bool IsPACURI(const nsACString &spec)
+  {
+    return mPACURISpec.Equals(spec) || mPACURIRedirectSpec.Equals(spec);
   }
 
-  bool IsPACURI(nsACString &spec)
-  {
+  bool IsPACURI(nsIURI *uri) {
+    if (mPACURISpec.IsEmpty() && mPACURIRedirectSpec.IsEmpty())
+      return false;
+
     nsAutoCString tmp;
-    return (mPACURI && NS_SUCCEEDED(mPACURI->GetSpec(tmp)) && tmp.Equals(spec));
+    uri->GetSpec(tmp);
+    return IsPACURI(tmp);
   }
 
   NS_HIDDEN_(nsresult) Init(nsISystemProxySettings *);
@@ -198,8 +206,8 @@ private:
 
   mozilla::LinkedList<PendingPACQuery> mPendingQ; /* pac thread only */
 
-  nsCOMPtr<nsIURI>             mPACURI;
-  nsCString                    mPACURISpec; // for use off main thread
+  nsCString                    mPACURISpec; // Not an nsIRUI for use off main thread
+  nsCString                    mPACURIRedirectSpec;
   nsCOMPtr<nsIStreamLoader>    mLoader;
   bool                         mLoadPending;
   bool                         mShutdown;
